Initial commit: Junos telemetry collection with Ansible and Prometheus
- Ansible playbook for NETCONF RPC execution
- Optical diagnostics parser with per-interface and per-lane metrics
- Prometheus Pushgateway integration
- Docker Compose setup for Prometheus stack
- Comprehensive test suite with 100% pass rate
- AWX quick-start guide for scheduling
- Complete documentation

--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,19 @@ __pycache__/
 .Python
 venv/
 venv312/
+env/
 *.egg-info/
 
-# Output files
+# Output files (keep directory structure but ignore contents)
 output/*.xml
 output/*.json
 test_output/*.json
 test_output/*.prom
+
+# Keep sample/test data
+!parsers/test_data/*.xml
+!parsers/test_data/*.json
+!parsers/test_data/*.meta
 
 # Logs
 *.log
@@ -30,3 +36,9 @@ grafana_data/
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+
+# Credentials (if any)
+secrets.yml
+vault_password.txt
