--- a/inventory.yml
+++ b/inventory.yml
@@ -12,7 +12,7 @@ all:
           ansible_ssh_common_args: '-o PreferredAuthentications=password'
           ansible_port: 22
           # Optional: Device-specific interface filter (comma-separated)
-          # interface_filter: "et-0/0/32,et-0/0/33"
+          interface_filter: "et-0/0/32"
         10.83.6.222: # XAI RMAed QFX
           ansible_user: root
           ansible_password: fasetup123
@@ -21,4 +21,28 @@ all:
           ansible_ssh_common_args: '-o PreferredAuthentications=password'
           ansible_port: 22
           # Optional: Device-specific interface filter (comma-separated)
-          # interface_filter: "et-0/0/48,et-0/0/49"        
+          interface_filter: "et-0/0/62:0, et-0/0/62:1"
+        dcf-hill7-evo.englab.juniper.net: # DCs Hill7 Evo
+          ansible_user: root
+          ansible_password: Embe1mpls
+          ansible_network_os: junipernetworks.junos.junos
+          ansible_connection: netconf
+          ansible_ssh_common_args: '-o PreferredAuthentications=password'
+          ansible_port: 22
+          interface_filter: "et-0/0/0:0"
+        dcf-hill9-evo.englab.juniper.net: # DCs Hill9 Evo
+          ansible_user: root
+          ansible_password: Embe1mpls
+          ansible_network_os: junipernetworks.junos.junos
+          ansible_connection: netconf
+          ansible_ssh_common_args: '-o PreferredAuthentications=password'
+          ansible_port: 22
+          interface_filter: "et-0/0/0:0, et-0/0/0:1"
+        dcf-hill10-evo.englab.juniper.net: # DCs Hill10 Evo
+          ansible_user: root
+          ansible_password: Embe1mpls
+          ansible_network_os: junipernetworks.junos.junos
+          ansible_connection: netconf
+          ansible_ssh_common_args: '-o PreferredAuthentications=password'
+          ansible_port: 22
+          interface_filter: "et-0/0/0:1"
