--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,4 +2,6 @@
 host_key_checking = False
 inventory = inventory.yml
 retry_files_enabled = False
-stdout_callback = yaml
+stdout_callback = default
+callbacks_enabled = default
+result_format = yaml
