--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -9,7 +9,7 @@ all:
           ansible_password: Embe1mpls
           ansible_network_os: junipernetworks.junos.junos
           ansible_connection: netconf
-          ansible_ssh_common_args: '-o PreferredAuthentications=password'
+          ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
           ansible_port: 22
           interface_filter: "xe-0/0/48:2, xe-0/0/48:3, xe-0/0/6, xe-0/0/7, xe-0/0/52:3, xe-0/0/21"      
         10.209.3.39: # HW Lab Sunnyvale
@@ -17,7 +17,7 @@ all:
           ansible_password: Embe1mpls
           ansible_network_os: junipernetworks.junos.junos
           ansible_connection: netconf
-          ansible_ssh_common_args: '-o PreferredAuthentications=password'
+          ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
           ansible_port: 22
           # Optional: Device-specific interface filter (comma-separated)
           interface_filter: "et-0/0/32"
@@ -26,7 +26,7 @@ all:
           ansible_password: Embe1mpls
           ansible_network_os: junipernetworks.junos.junos
           ansible_connection: netconf
-          ansible_ssh_common_args: '-o PreferredAuthentications=password'
+          ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
           ansible_port: 22
           interface_filter: > 
             et-0/0/11:0, et-0/0/9:0, et-0/0/20:0, et-0/0/20:1, 
@@ -43,7 +43,7 @@ all:
           ansible_password: Embe1mpls
           ansible_network_os: junipernetworks.junos.junos
           ansible_connection: netconf
-          ansible_ssh_common_args: '-o PreferredAuthentications=password'
+          ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
           ansible_port: 22
           interface_filter: > 
             et-0/0/8, et-0/0/9, et-0/0/10, et-0/0/11, 
@@ -59,7 +59,7 @@ all:
           ansible_password: Embe1mpls
           ansible_network_os: junipernetworks.junos.junos
           ansible_connection: netconf
-          ansible_ssh_common_args: '-o PreferredAuthentications=password'
+          ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
           ansible_port: 22
           interface_filter: > 
             et-0/0/2:0, et-0/0/5:1, et-0/0/3:0, et-0/0/3:2, 
