--- a/ansible/junos_telemetry.yml
+++ b/ansible/junos_telemetry.yml
@@ -79,9 +79,12 @@
         --output "{{ output_dir }}/{{ inventory_hostname }}_{{ item.item.name }}_metrics.json"
         --device "{{ inventory_hostname }}"
         --format json
-        {% if device_interface_filter %}--interfaces "{{ device_interface_filter }}"{% endif %}
+        {% if device_interface_filter and item.item.name == 'optics_diagnostics' %}--interfaces "{{ device_interface_filter }}"{% endif %}
       args:
         executable: python3
+        chdir: "{{ playbook_dir }}"
+      environment:
+        PYTHONPATH: "{{ playbook_dir }}"
       loop: "{{ rpc_results.results }}"
       loop_control:
         label: "{{ item.item.name }}"
@@ -94,6 +97,52 @@
       loop_control:
         label: "{{ item.item.item.name }}"
       when: item.stdout_lines is defined
+    
+    - name: Collect PIC details for detailed transceiver information
+      script: >
+        scripts/collect_pic_details.py
+        --host "{{ inventory_hostname }}"
+        --username "{{ ansible_user }}"
+        --password "{{ ansible_password }}"
+        --port "{{ ansible_port | default(830) }}"
+        --chassis-xml "{{ output_dir }}/{{ inventory_hostname }}_chassis_inventory_raw.xml"
+        --output "{{ output_dir }}/{{ inventory_hostname }}_pic_detail_metrics.json"
+        {% if hostvars[inventory_hostname].hardware_model is defined %}--platform "{{ hostvars[inventory_hostname].hardware_model }}"{% endif %}
+      args:
+        executable: python3
+        chdir: "{{ playbook_dir }}"
+      environment:
+        PYTHONPATH: "{{ playbook_dir }}"
+      when: "'chassis_inventory' in rpc_config.rpc_commands | map(attribute='name')"
+      register: pic_detail_result
+      ignore_errors: yes
+    
+    - name: Display PIC detail collection result
+      debug:
+        msg: "{{ pic_detail_result.stdout_lines }}"
+      when: pic_detail_result is defined and pic_detail_result.stdout_lines is defined
+    
+    - name: Merge metadata into optics diagnostics
+      script: >
+        parsers/juniper/merge_metadata.py
+        --system-info "{{ output_dir }}/{{ inventory_hostname }}_system_information_metrics.json"
+        --chassis-inventory "{{ output_dir }}/{{ inventory_hostname }}_chassis_inventory_metrics.json"
+        {% if pic_detail_result is defined and pic_detail_result.rc == 0 %}--pic-detail "{{ output_dir }}/{{ inventory_hostname }}_pic_detail_metrics.json"{% endif %}
+        --optics-metrics "{{ output_dir }}/{{ inventory_hostname }}_optics_diagnostics_metrics.json"
+        --output "{{ output_dir }}/{{ inventory_hostname }}_optics_diagnostics_metrics.json"
+      args:
+        executable: python3
+        chdir: "{{ playbook_dir }}"
+      environment:
+        PYTHONPATH: "{{ playbook_dir }}"
+      when: "'optics_diagnostics' in rpc_config.rpc_commands | map(attribute='name')"
+      register: merge_result
+      ignore_errors: yes
+    
+    - name: Display merge result
+      debug:
+        msg: "{{ merge_result.stdout_lines }}"
+      when: merge_result is defined and merge_result.stdout_lines is defined
     
     - name: Push metrics to Prometheus Pushgateway
       script: >
