--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -5,3 +5,6 @@ lxml>=4.6.0
 jxmlease>=1.0.1
 looseversion>=1.3.0
 xmltodict>=0.13.0
+# ML data collection dependencies
+pyarrow>=11.0.0
+pandas>=1.5.0
