--- a/ansible/junos_telemetry.yml
+++ b/ansible/junos_telemetry.yml
@@ -224,3 +224,31 @@
       loop_control:
         label: "{{ item.item.name }}"
       when: prometheus_pushgateway is defined
+
+# Aggregate all devices into hourly Parquet files
+- name: Write Hourly Parquet Files
+  hosts: localhost
+  connection: local
+  gather_facts: no
+  
+  vars:
+    output_dir: "{{ '../output' if playbook_dir != '/ansible' else '/output' }}"
+  
+  tasks:
+    - name: Write aggregated hourly Parquet files (interface_dom, lane_dom, interface_counters)
+      script: >
+        scripts/write_hourly_parquet.py
+        --metrics-dir "{{ output_dir }}"
+        --base-dir "{{ output_dir }}/ml_data"
+        --compression snappy
+      args:
+        executable: python3
+        chdir: "{{ playbook_dir }}"
+      environment:
+        PYTHONPATH: "{{ playbook_dir }}"
+      register: hourly_parquet_result
+    
+    - name: Display hourly Parquet results
+      debug:
+        msg: "{{ hourly_parquet_result.stdout_lines }}"
+      when: hourly_parquet_result.stdout_lines is defined
