--- a/ansible/junos_telemetry.yml
+++ b/ansible/junos_telemetry.yml
@@ -8,6 +8,7 @@
     netconf_port: 830
     # Use /output for container, ../output for host
     output_dir: "{{ '/output' if playbook_dir == '/ansible' else '../output' }}"
+    raw_ml_data_dir: "{{ '/raw_ml_data' if playbook_dir == '/ansible' else '../raw_ml_data' }}"
     prometheus_pushgateway: "http://pushgateway:9091"
     rpc_config_file: "rpc_commands.yml"
     # Optional: Comma-separated list of interfaces to monitor (e.g., "et-0/0/32,et-0/0/33")
@@ -239,7 +240,7 @@
       script: >
         scripts/write_hourly_parquet.py
         --metrics-dir "{{ output_dir }}"
-        --base-dir "{{ output_dir }}/ml_data"
+        --base-dir "{{ output_dir }}/raw_ml_data"
         --compression snappy
       args:
         executable: python3
