--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -1,50 +1,24 @@
 ---
 all:
-  # ansible_python_interpreter: /usr/bin/python3
   children:
-    junos_devices:
+    junos:
       hosts:
         dcf-onyx27-jun.englab.juniper.net:
-          ansible_user: root
-          ansible_password: Embe1mpls
-          ansible_network_os: junipernetworks.junos.junos
-          ansible_connection: netconf
-          ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
-          ansible_port: 22
-          interface_filter: "xe-0/0/48:2, xe-0/0/48:3, xe-0/0/6, xe-0/0/7, xe-0/0/52:3, xe-0/0/21"      
+          interface_filter: "xe-0/0/48:2, xe-0/0/48:3, xe-0/0/6, xe-0/0/7, xe-0/0/52:3, xe-0/0/21"
         10.209.3.39: # HW Lab Sunnyvale
-          ansible_user: root
-          ansible_password: Embe1mpls
-          ansible_network_os: junipernetworks.junos.junos
-          ansible_connection: netconf
-          ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
-          ansible_port: 22
-          # Optional: Device-specific interface filter (comma-separated)
           interface_filter: "et-0/0/32"
-        xai-qfx5240-01.englab.juniper.net: #XAI RMAed device
-          ansible_user: root
-          ansible_password: Embe1mpls
-          ansible_network_os: junipernetworks.junos.junos
-          ansible_connection: netconf
-          ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
-          ansible_port: 22
-          interface_filter: > 
-            et-0/0/11:0, et-0/0/9:0, et-0/0/20:0, et-0/0/20:1, 
-            et-0/0/22:0, et-0/0/22:1, et-0/0/23:0, et-0/0/23:1, 
-            et-0/0/21:1, et-0/0/21:0, et-0/0/19:0, et-0/0/19:1, 
-            et-0/0/13:1, et-0/0/26:0, et-0/0/26:1, et-0/0/16:1,
-            et-0/0/17:0, et-0/0/17:1, et-0/0/14:0, et-0/0/14:1,
-            et-0/0/18:0, et-0/0/18:1, et-0/0/32:0, et-0/0/3:0, 
-            et-0/0/32:1, et-0/0/6:0, et-0/0/34:0, et-0/0/34:1,
-            et-0/0/4:1, et-0/0/7:0, et-0/0/33:0, et-0/0/33:1, 
-            et-0/0/31:0, et-0/0/31:1, et-0/0/24:0, et-0/0/30:1
-        kakao-fa-qfx5220.englab.juniper.net: #KAKAO RMAed device
-          ansible_user: root
-          ansible_password: Embe1mpls
-          ansible_network_os: junipernetworks.junos.junos
-          ansible_connection: netconf
-          ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
-          ansible_port: 22
+        xai-qfx5240-01.englab.juniper.net: # XAI RMAed device
+            interface_filter: > 
+              et-0/0/11:0, et-0/0/9:0, et-0/0/20:0, et-0/0/20:1, 
+              et-0/0/22:0, et-0/0/22:1, et-0/0/23:0, et-0/0/23:1, 
+              et-0/0/21:1, et-0/0/21:0, et-0/0/19:0, et-0/0/19:1, 
+              et-0/0/13:1, et-0/0/26:0, et-0/0/26:1, et-0/0/16:1,
+              et-0/0/17:0, et-0/0/17:1, et-0/0/14:0, et-0/0/14:1,
+              et-0/0/18:0, et-0/0/18:1, et-0/0/32:0, et-0/0/3:0, 
+              et-0/0/32:1, et-0/0/6:0, et-0/0/34:0, et-0/0/34:1,
+              et-0/0/4:1, et-0/0/7:0, et-0/0/33:0, et-0/0/33:1, 
+              et-0/0/31:0, et-0/0/31:1, et-0/0/24:0, et-0/0/30:1
+        kakao-fa-qfx5220.englab.juniper.net: # KAKAO RMAed device
           interface_filter: > 
             et-0/0/8, et-0/0/9, et-0/0/10, et-0/0/11, 
             et-0/0/12, et-0/0/13, et-0/0/20, et-0/0/21, 
@@ -54,47 +28,7 @@ all:
             et-0/0/29, et-0/0/30, et-0/0/31, et-0/0/22, 
             et-0/0/23, et-0/0/16, et-0/0/17, et-0/0/18, 
             et-0/0/19, et-0/0/24, et-0/0/25
-        dcf-glen8-evo.englab.juniper.net: #KAKAO RMAed device
-          ansible_user: root
-          ansible_password: Embe1mpls
-          ansible_network_os: junipernetworks.junos.junos
-          ansible_connection: netconf
-          ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
-          ansible_port: 22
+        dcf-glen8-evo.englab.juniper.net: # KAKAO RMAed device
           interface_filter: > 
             et-0/0/2:0, et-0/0/5:1, et-0/0/3:0, et-0/0/3:2, 
-            et-0/0/4:1, et-0/0/2:2, et-0/0/3:0, et-0/0/3:1 
-        # 10.83.6.222: # XAI RMAed QFX
-        #   ansible_user: root
-        #   ansible_password: fasetup123
-        #   ansible_network_os: junipernetworks.junos.junos
-        #   ansible_connection: netconf
-        #   ansible_ssh_common_args: '-o PreferredAuthentications=password'
-        #   ansible_port: 22
-        #   # Optional: Device-specific interface filter (comma-separated)
-        #   interface_filter: "et-0/0/62:0, et-0/0/62:1"
-        # dcf-hill7-evo.englab.juniper.net: # DCs Hill7 Evo
-        #   ansible_user: root
-        #   ansible_password: Embe1mpls
-        #   ansible_network_os: junipernetworks.junos.junos
-        #   ansible_connection: netconf
-        #   ansible_ssh_common_args: '-o PreferredAuthentications=password'
-        #   ansible_port: 22
-        #   interface_filter: "et-0/0/0:0"
-        # dcf-hill9-evo.englab.juniper.net: # DCs Hill9 Evo
-        #   ansible_user: root
-        #   ansible_password: Embe1mpls
-        #   ansible_network_os: junipernetworks.junos.junos
-        #   ansible_connection: netconf
-        #   ansible_ssh_common_args: '-o PreferredAuthentications=password'
-        #   ansible_port: 22
-        #   interface_filter: "et-0/0/0:0, et-0/0/0:1"
-        # dcf-hill10-evo.englab.juniper.net: # DCs Hill10 Evo
-        #   ansible_user: root
-        #   ansible_password: Embe1mpls
-        #   ansible_network_os: junipernetworks.junos.junos
-        #   ansible_connection: netconf
-        #   ansible_ssh_common_args: '-o PreferredAuthentications=password'
-        #   ansible_port: 22
-        #   interface_filter: "et-0/0/0:1"
-
+            et-0/0/4:1, et-0/0/2:2, et-0/0/3:0, et-0/0/3:1
