--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -78,6 +78,8 @@ services:
       SEMAPHORE_ACCESS_KEY_ENCRYPTION: gs72mPntFATGJs9qK0pQ0rKtfidlexiMjYCH9gWKhTU=
       SEMAPHORE_LDAP_ACTIVATED: 'no'
       ANSIBLE_HOST_KEY_CHECKING: 'false'
+      SEMAPHORE_USE_REMOTE_RUNNER: 'true'
+      SEMAPHORE_RUNNER_REGISTRATION_TOKEN: 'gs72mPntFATGJs9qK0pQ0rKtfidlexiMjYCH9gWKhTU='
     volumes:
       - /home/ubuntu/.ssh:/root/.ssh:ro    
       - ../ansible:/ansible:ro
