--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,6 +1,6 @@
 ---
 collections:
   - name: junipernetworks.junos
-    version: ">=5.0.0"
+    version: "==11.0.0"
   - name: community.aws
     version: ">=6.0.0"
