--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,6 +1,6 @@
 ---
 collections:
-  - name: junipernetworks.junos
-    version: "==11.0.0"
+  # - name: junipernetworks.junos
+  #   version: "==11.0.0"
   - name: community.aws
     version: ">=6.0.0"
