--- a/ansible/group_vars/xai/vars.yml
+++ b/ansible/group_vars/xai/vars.yml
@@ -4,5 +4,5 @@ ansible_user: "{{ vault_xai_username }}"
 ansible_password: "{{ vault_xai_password }}"
 ansible_network_os: junipernetworks.junos.junos
 ansible_connection: netconf
-ansible_ssh_common_args: '-o PreferredAuthentications=password'
+ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=password'
 ansible_port: 22
