--- a/ansible/junos_telemetry.yml
+++ b/ansible/junos_telemetry.yml
@@ -7,8 +7,10 @@
   vars:
     netconf_port: 830
     # Use /output for container, ../output for host
-    output_dir: "{{ '/output' if playbook_dir == '/ansible' else '../output' }}"
+    # output_dir: "{{ '/output' if playbook_dir == '/ansible' else '../output' }}"
     raw_ml_data_dir: "{{ '/raw_ml_data' if playbook_dir == '/ansible' else '../raw_ml_data' }}"
+    output_dir: "/tmp/semaphore/output"
+    raw_ml_data_dir: "/tmp/semaphore/raw_ml_data"
     prometheus_pushgateway: "http://pushgateway:9091"
     rpc_config_file: "rpc_commands.yml"
     # Optional: Comma-separated list of interfaces to monitor (e.g., "et-0/0/32,et-0/0/33")
