--- a/ansible/junos_telemetry.yml
+++ b/ansible/junos_telemetry.yml
@@ -8,7 +8,7 @@
     netconf_port: 830
     # Use /output for container, ../output for host
     # output_dir: "{{ '/output' if playbook_dir == '/ansible' else '../output' }}"
-    raw_ml_data_dir: "{{ '/raw_ml_data' if playbook_dir == '/ansible' else '../raw_ml_data' }}"
+    # raw_ml_data_dir: "{{ '/raw_ml_data' if playbook_dir == '/ansible' else '../raw_ml_data' }}"
     output_dir: "/tmp/semaphore/output"
     raw_ml_data_dir: "/tmp/semaphore/raw_ml_data"
     prometheus_pushgateway: "http://pushgateway:9091"
@@ -214,9 +214,10 @@
   gather_facts: no
   
   vars:
-    output_dir: "{{ '../output' if playbook_dir != '/ansible' else '/output' }}"
-    raw_ml_data_dir: "{{ '/raw_ml_data' if playbook_dir == '/ansible' else '../raw_ml_data' }}"
-  
+    # output_dir: "{{ '../output' if playbook_dir != '/ansible' else '/output' }}"
+    # raw_ml_data_dir: "{{ '/raw_ml_data' if playbook_dir == '/ansible' else '../raw_ml_data' }}"
+    output_dir: "/tmp/semaphore/output"
+    raw_ml_data_dir: "/tmp/semaphore/raw_ml_data"
   tasks:
     - name: Write aggregated hourly Parquet files (interface_dom, lane_dom, interface_counters)
       script: >
