--- a/ansible/junos_telemetry.yml
+++ b/ansible/junos_telemetry.yml
@@ -232,9 +232,13 @@
     output_dir: "/tmp/semaphore/output"
     raw_ml_data_dir: "/tmp/semaphore/raw_ml_data"
   tasks:
+    - name: Get runner name from container environment
+      shell: echo $SEMAPHORE_RUNNER_NAME
+      register: runner_name_result
+    
     - name: Set runner name variable
       set_fact:
-        runner_name: "{{ lookup('ansible.builtin.env', 'SEMAPHORE_RUNNER_NAME') | default('', true) }}"
+        runner_name: "{{ runner_name_result.stdout }}"
     
     - name: Fail if runner name is not set
       fail:
